--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,14 @@ body {
 .btn.dropdown-toggle:focus {
   outline: none !important;
 }
+
+.overlayy {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #000;
+  opacity: 0.75;
+  z-index: 20;
+}
